# InferGate

./: .gitignore  README.md  pyproject.toml
baselines/: __init__.py  edf.py  fcfs.py  sjf.py  static_threshold.py  vtc_inspired.py
configs/: local_a4000.yaml  policies.yaml  workloads.yaml
experiments/: __init__.py  calibrate_policy.py  mock_vllm_server.py  plot.py  run_all.py  run_cache_matrix.py  run_experiment.py  run_main_matrix.py  summarize.py  summarize_cache_matrix.py  summarize_main_matrix.py  validate_prefix_cache.py
infergate/: __init__.py  app.py  cache_registry.py  logging_utils.py  metrics.py  policies.py  proxy.py  queue.py  schemas.py  tokenizer.py  warmup.py
paper/: literature_matrix.csv  notes.md
scripts/: smoke_test.ps1  start_vllm_example.ps1  start_vllm_lmcache_example.ps1
tests/: test_cache_matrix_summary.py  test_cache_registry.py  test_cost_estimator.py  test_integration_mock.py  test_main_matrix_summary.py  test_metrics_parser.py  test_policies.py
tests/fixtures/: real_vllm_metrics_sample.txt
workloads/: __init__.py  datasets.py  generator.py  session_templates.py
