[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "infergate"
version = "0.1.0"
description = "Utility- and cache-aware admission control sidecar for vLLM OpenAI-compatible serving."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "pydantic>=2.8",
  "uvicorn>=0.30",
  "pandas>=2.2",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.24",
]
tokenizer = [
  "transformers>=4.44",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["infergate*", "workloads*", "experiments*", "baselines*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
asyncio_mode = "auto"

